BackEnd_Learn/kotlin/entity/src/main/kotlin/com/example/entity/error/GlobalExceptionHandler.kt
package com.example.entity.error

class GlobalExceptionHandler {
}